--- a/style3.css
+++ b/style3.css
@@ -1,8 +1,7 @@
-.resturant{
-      display: flex;
-    padding: 20px;
-    outline: 2px solid blue;
-    gap: 5%;
+a{
+    text-decoration: none;
+    color: white;
+    align-items: center;
 }
 header{
     display: flex;
@@ -11,21 +10,84 @@ header{
     padding: 10px 20px;
     background-color: rgb(0, 0, 0);
     color: white;
-    background-color: burlywood;
+    background-color: rgb(90, 90, 199);
 }
-a{
-    text-decoration: none;
-    color: white;
+header h1{
+    font-size: 24px;
+    margin: 0;
+}
+body{
+    background-color: rgb(243, 192, 156);
+    text-align: center;
+}
+main{
+    margin: 20px;
+    padding: 20px;
+    border-radius: 8px;
+    color: rgb(0, 0, 0);
     align-items: center;
+    text-align: center;
 }
-.deserts{
+.resturant{
     display: flex;
     flex-direction: column;
-    gap: 2%;
+    align-items: center;
+    gap: 20px;
+    text-align: center;
+    padding: relative;
+    top: 30%;
 }
-.deserts img{
-    width: 600px;
+.hero-img{
+    width: 600px; 
     height: 400px;
-    border-radius: 10px;
+    border-radius: 20px;
+    right: 40px;
+    left: 40px;
+    top: 10px;
+    bottom: 10px;
 }
+.about p{
+    text-align: right;
+    margin: auto;
 
+}
+.menu-items{
+    text-align: center;
+    margin: auto;
+    border-radius: 20px;
+}
+.menu-items img{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 450px;
+
+}
+.menu-items p{
+    text-align: right;
+    margin: auto;
+    padding: 20px;
+}
+.desserts{
+    text-align: center;
+    margin: auto;
+}
+.desserts p{
+    text-align: justify;
+    padding: 20px;
+}
+.desserts img{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+footer{
+    background-color: rgb(243, 192, 156);
+    color: rgb(255, 255, 255);
+    text-align: center;
+    padding: 10px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    margin-top: 20px;
+}
